# The-Neural-Assembler-OS

./: .gitignore  Cargo.toml  README.md  boot.asm  build_and_run.sh  linker.ld
src/: core_brain.rs  main.rs  mmu.rs  neural_core.rs
src/core_brain/: funnel.rs
src/hal/: input.rs  memory.rs  mod.rs
tools/: link_lean_to_asm.py
